# long-horizon-scaling

./: .gitignore  README.md  pyproject.toml
data/model-lists/: free-models
environments/: arithmetic.py  coin.py  cooking.py  mapreader.py  peckingorder.py  simonsays.py  sorting.py  textworld.py  twc.py
experiments/: run_ablation.py
experiments/analysis/2026-06-26-error-category-game-score-experiment/: judge_drift.py  parse_ablation_results.py
experiments/scripts/: 2026-06-17-0954-test-ablation.sh  2026-06-17-1312-powerset-ablation.py  2026-06-18-1132-launch-modal-powerset-ablation.py  2026-06-26-error-category-game-score-experiment.py
exploratory-experiments/: experiment-2026-06-21-test-shapley.py
harness/: config.py  scorer.py  solver.py
harness/actions/: types.py
harness/environment/: environment.py
harness/mechanisms/: __init__.py  m1_info_seeking.py  m2_memory.py  m3_state_ext.py  m4_compute.py  m5_templating.py  m6_planning.py  m7_world_model.py  m8_game_rules.py  mechanism.py
harness/probes/: base.py  cooking.py
