[project]
name = "long-horizon-scaling"
version = "0.1.0"
description = "Testing models at long horizons"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "inspect-ai>=0.3.240",
    "modal>=1.5.0",
    "openai>=2.42.0",
    "textworld-express>=1.1.0",
]

[project.optional-dependencies]
cloud = [
    "vllm>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
